# Dory

./: .gitignore  AGENT_MEMORY_ARCHITECTURE.md  ARCHITECTURE.md  CHANGELOG.md  DEVLOG.md  LICENSE  README.md  ROADMAP_V3.md  SECURITY.md  TECHNICAL_OVERVIEW.md  demo.py  dory_cli.py  dory_mcp.py  migrate.py  planning.md  pyproject.toml  run_benchmark.sh  run_v07_full.sh  run_v07_spot.sh  seed.py
.agents/plugins/: marketplace.json
benchmarks/: .gitignore  ABLATION.md  CHANGES_v05_session.md  README.md  REPORT_claudecode_mcp_v04.md  REPORT_v05.md  REPORT_v06.md  REPORT_v091.md  compare_runs.py  eval_and_compare.sh  evaluate_anthropic.py  evaluate_claude.py  evaluate_qa_claude.py  longmemeval.py  predictions_haiku.jsonl  predictions_oracle.jsonl  predictions_smoke.jsonl  predictions_spot_micro_v2.jsonl  predictions_spot_micro_v2.jsonl.eval-results-claude-haiku-4-5-20251001  predictions_spot_v4_v2.jsonl  predictions_spot_v4_v2.jsonl.eval-results-claude-haiku-4-5-20251001  preference_audit.py  spot_micro.json  spot_preference.json  spot_v4.json  spot_v4_stratified.json  spot_v5.json
benchmarks/archive/: spot_date_fix.json
browser-extension/: background.js  manifest.json
browser-extension/content/: base.js  chatgpt.js  claude.js  gemini.js  perplexity.js
browser-extension/options/: options.html  options.js
browser-extension/sidebar/: sidebar.css
docs/: AGENT_MEMORY_WORKFLOW.md  BENCHMARK_REPORT_v08.md  BENCHMARK_REPORT_v08_sonnet_mcp.md  CODEX_INTEGRATION.md  HARDENING_2026-03-29.md  REPO_CLEANUP_2026-03-29.md  demo.html  demo_v2.html  graph_live.html
docs/archive/user-tests/: report_mcp_new_user_2026-03-21.md  report_pypi_new_user_2026-03-21.md
dory/: __init__.py  activation.py  consolidation.py  graph.py  mcp_server.py  memory.py  rest_server.py  sanitize.py  schema.py  session.py  store.py  vector.py  visualize.py
dory/adapters/: __init__.py  langchain.py  langgraph.py  multi_agent.py
dory/export/: __init__.py  jsonld.py
dory/pipeline/: __init__.py  decayer.py  observer.py  prefixer.py  reflector.py  summarizer.py
examples/: demo_graph.py  demo_lowlevel.py  demo_ollama.py  demo_topology.py  live_chat.py  quickstart.py
examples/archive/: live_chat_legacy.py
plugins/dory-memory/.codex-plugin/: plugin.json
plugins/dory-memory/skills/: dory-memory.md
tests/: conftest.py  test_activation.py  test_consolidation.py  test_decayer.py  test_graph.py  test_integration_live.py  test_mcp.py  test_observer.py  test_prefixer.py  test_reflector.py  test_schema.py  test_session.py  test_store.py  test_visualize.py
tests/user_tests/: README.md
