[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dory-ai"
version = "0.1.0"
description = "Agent memory that actually sticks. Local-first, graph-based, with principled forgetting."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Michael Martin" }]
requires-python = ">=3.11"
keywords = ["agent", "memory", "llm", "ai", "graph", "local", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sqlite-vec>=0.1.6",
    "ollama>=0.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
dory = "dory_cli:main"

[project.urls]
Homepage = "https://github.com/MichaelMartinTech/Dory"
Repository = "https://github.com/MichaelMartinTech/Dory"
Issues = "https://github.com/MichaelMartinTech/Dory/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dory*"]
